# tts-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.json  pyproject.toml
implementation-details/: 01-project-setup.md  02-config.md  03-audio-player.md  04-tts-module-interface.md  05-elevenlabs-module.md  06-tts-engine.md  07-mcp-server.md  08-e2e-testing.md  implem.md
plans/: 01-project-setup.md  02-config.md  03-audio-player.md  04-tts-module-interface.md  05-elevenlabs-module.md  06-tts-engine.md  07-mcp-server.md  08-e2e-testing.md  plans.md
specs/: architecture.md  audio-player.md  configuration.md  elevenlabs-module.md  mcp-server.md  overview.md  project-structure.md  specs.md  tts-module-interface.md
src/tts_mcp/: __init__.py  _logging.py  audio.py  cli.py  config.py  engine.py  server.py
src/tts_mcp/modules/: __init__.py  base.py  elevenlabs.py
tests/: test_audio.py  test_config.py  test_engine.py  test_server.py
tests-e2e/: conftest.py  helpers.py  test_speak.py
tests/modules/: test_elevenlabs.py  test_tts_module_interface.py
