[project]
name = "tts-mcp"
version = "0.1.0"
description = "MCP server exposing text-to-speech via a speak tool"
readme = "README.md"
authors = [
    { name = "thervier", email = "thibault@fr2g.io" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "uvicorn",
    "elevenlabs",
    "sounddevice",
    "numpy",
    "miniaudio",
]

[project.scripts]
tts-mcp-server = "tts_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests-e2e"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
